Checking screen sizes on phone and tablet

--- a/ShipSelector.csproj
+++ b/ShipSelector.csproj
@@ -24,6 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\BroadsidesCards\Damage\" />
+    <Folder Include="wwwroot\BroadsidesCards\Orders\" />
     <Folder Include="wwwroot\ShipImages\1\2\" />
     <Folder Include="wwwroot\ShipImages\2\2\" />
     <Folder Include="wwwroot\ShipImages\2\9\" />
