--- a/ShipSelector.csproj
+++ b/ShipSelector.csproj
@@ -31,6 +31,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Pages\BroadsideSD_Mockup.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
     <Content Update="wwwroot\Data\alliances.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
