--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -21,13 +21,13 @@
     },
     "https": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://localhost:7170;http://localhost:5036",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
+      "applicationUrl": "https://localhost:7170;http://localhost:5036"
     },
     "iisSettings": {
       "windowsAuthentication": false,
@@ -36,6 +36,14 @@
         "applicationUrl": "http://localhost:65155",
         "sslPort": 44398
       }
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:62902/",
+      "sslPort": 44356
     }
   }
 }
